Using local mirrors for CICD
Change-Id: I6dd84f44118b71cc0447970e3769781c6bc76ef1

--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml
@@ -1,4 +1,7 @@
 parameter_defaults:
+  #Local mirrors case (CICD)
+  SkipRhelEnforcement: true
+
   UpgradeLeappDebug: true
   UpgradeInitCommand: |
     sudo dnf module disable -y container-tools:rhel8
