--- a/rhosp/ffu_ziu_13_16/redhat_files/containers-prepare-parameter.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/containers-prepare-parameter.yaml.template
@@ -20,6 +20,4 @@ parameter_defaults:
       ceph3_tag: latest
       ceph3_image: rhceph-3-rhel7
     tag_from_label: '{version}-{release}'
-  ContainerImageRegistryCredentials:  
-    registry.redhat.io:
-      ${RHEL_USER}: ${RHEL_PASSWORD}
+  ${rhsm_image_registry_credentials}
