--- a/rhosp/ffu_ziu_13_16/redhat_files/containers-prepare-parameter.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/containers-prepare-parameter.yaml.template
@@ -8,18 +8,10 @@ parameter_defaults:
     set:
       name_prefix: openstack-
       name_suffix: ''
-      namespace: registry.redhat.io/rhosp-rhel8
-      neutron_driver: openvswitch
+      namespace: ${OPENSTACK_CONTAINER_REGISTRY}/rhosp-rhel8
+      neutron_driver: null
       rhel_containers: false
       tag: '16.1'
-      name_prefix_stein: openstack-
-      name_suffix_stein: ''
-      namespace_stein: registry.redhat.io/rhosp15-rhel8
-      tag_stein: 15.0
-      ceph3_namespace: registry.redhat.io/rhceph
-      ceph3_tag: latest
-      ceph3_image: rhceph-3-rhel7
-    tag_from_label: '{version}-{release}'
-  ContainerImageRegistryCredentials:  
-    registry.redhat.io:
-      ${RHEL_USER}: ${RHEL_PASSWORD}
+    tag_from_label: '{version}'
+  ${rhsm_image_registry_credentials}
+
