Overcloud and orchestration fixes
Change-Id: Ib09549ce6a79d28ad5d869594a6e82f41ffe4b87

--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml
@@ -2,6 +2,10 @@ parameter_defaults:
   #Local mirrors case (CICD)
   SkipRhelEnforcement: true
 
+  LeappInitCommand: |
+    sudo cp -f /home/stack/rhel8.repo /etc/yum.repos.d/
+    sudo rm -f /etc/yum.repos.d/local.repo
+
   UpgradeLeappDebug: true
   UpgradeInitCommand: |
     sudo dnf module disable -y container-tools:rhel8
@@ -14,6 +18,6 @@ parameter_defaults:
     --enablerepo rhel-8-for-x86_64-appstream-rpms
     --enablerepo rhel-8-for-x86_64-highavailability-rpms
     --enablerepo fast-datapath-for-rhel-8-x86_64-rpms
-    --enablerepo ansible-2-for-rhel-8-x86_64-rpms
+    --enablerepo ansible-2.9-for-rhel-8-x86_64-rpms
     --enablerepo openstack-16.1-for-rhel-8-x86_64-rpms
     --enablerepo satellite-tools-6.5-for-rhel-8-x86_64-rpms
