--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ paramiko
 python-subunit
 junitxml
 fixtures
+contrail-api-client==2005
+future==0.18.2
+six==1.15.0
+requests==2.24.0
+PyYAML==5.3.1
