--- a/.testr.conf
+++ b/.testr.conf
@@ -1,5 +1,5 @@
 [DEFAULT]
-test_command=python3 -m subunit.run discover ./scripts $LISTOPT $IDOPTION
+test_command=python3 -m subunit.run discover ./tests $LISTOPT $IDOPTION
 test_id_option=--load-list $IDFILE
 test_list_option=--list
 group_regex=([^\.]*\.)*
