Refactoring. Removing specific nightly scripts
enabling virt
bugfix for functions.sh path
partial-jira-bug: CEM-17918

Change-Id: I62e97d467fc2c4d11b148386c863dbe620587028

--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml
@@ -11,9 +11,8 @@ parameter_defaults:
     sudo subscription-manager release --set=8.2
     sudo dnf module disable -y container-tools:rhel8
     sudo dnf module enable -y container-tools:2.0
-    #https://bugzilla.redhat.com/show_bug.cgi?id=1883379
-    #sudo dnf module disable -y virt:rhel
-    #sudo dnf module enable -y virt:8.2
+    sudo dnf module disable -y virt:rhel
+    sudo dnf module enable -y virt:8.2
     sudo dnf distro-sync -y
   UpgradeLeappCommandOptions: >
     --no-rhsm
