FFU parallel process (with local CICD mirrors)
Depends-On: Ic710528728f42f7e9f45d8bf40188020db3350aa
partial-jira-bug: CEM-21696
partial-jira-bug: CEM-22061
Signed-off-by: Gleb Galkin <gleb108@gmail.com>
Change-Id: If25f9b9b37ae9dda0fbb93ce9db894943dc937fe

--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
@@ -2,9 +2,14 @@ parameter_defaults:
   #Local mirrors case (CICD)
   SkipRhelEnforcement: true
 
+  #UpgradeLeappDevelSkip: "LEAPP_UNSUPPORTED=1 LEAPP_DEVEL_TARGET_RELEASE=8.2"
+  UpgradeLeappDevelSkip: "LEAPP_UNSUPPORTED=1"
+
   LeappInitCommand: |
-    sudo cp -f /home/stack/rhel8.repo /etc/yum.repos.d/
+    module=floppy; sudo lsmod | grep -q $module && { sudo rmmod $module; echo "$module unloaded"; } || echo "$module was not loaded"
+    module=pata_acpi; sudo lsmod | grep -q $module && { sudo rmmod $module; echo "$module unloaded"; } || echo "$module was not loaded"
     sudo rm -f /etc/yum.repos.d/local.repo
+    sudo cp -f /home/${NODE_ADMIN_USERNAME}/rhel8.repo /etc/yum.repos.d/
 
   UpgradeLeappDebug: true
   UpgradeInitCommand: |
