--- a/rhosp/ffu_ziu_13_16/redhat_files/containers-prepare-parameter.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/containers-prepare-parameter.yaml.template
@@ -12,6 +12,13 @@ parameter_defaults:
       neutron_driver: null
       rhel_containers: false
       tag: '16.1.2'
+      name_prefix_stein: openstack-
+      name_suffix_stein: ''
+      namespace_stein: ${OPENSTACK_CONTAINER_REGISTRY_FFU}/rhosp15-rhel8
+      tag_stein: 15.0
+      ceph3_namespace: ${OPENSTACK_CONTAINER_REGISTRY_FFU}/rhceph
+      ceph3_tag: latest
+      ceph3_image: rhceph-3-rhel7
     tag_from_label: '{version}'
   ${rhsm_image_registry_credentials}
 
