--- a/rhosp/ffu_ziu_13_16/tf_specific/playbook-nics-vhost0.yaml
+++ b/rhosp/ffu_ziu_13_16/tf_specific/playbook-nics-vhost0.yaml
@@ -31,6 +31,7 @@
               - "contrail.org.ifcfg-eth*"
               - "ifcfg-eth*"
               - "ifcfg-pkt*"
+              - "ifcfg-vhost0"
           register: files_to_delete
         - name: removing old ifcfg files
           file:
