--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
@@ -5,7 +5,7 @@ parameter_defaults:
   #Default timeout can be increased
   #UpgradeLeappRebootTimeout: 3600 
 
-  #UpgradeLeappDevelSkip: "LEAPP_UNSUPPORTED=1 LEAPP_DEVEL_TARGET_RELEASE=8.2"
+  #UpgradeLeappDevelSkip: "LEAPP_UNSUPPORTED=1 LEAPP_DEVEL_TARGET_RELEASE=${RHEL_VERSION_NUM}"
   UpgradeLeappDevelSkip: "LEAPP_UNSUPPORTED=1"
 
   LeappInitCommand: |
@@ -25,9 +25,9 @@ parameter_defaults:
 
   UpgradeLeappDebug: true
   UpgradeInitCommand: |
-    sudo subscription-manager release --set=8.2
+    sudo subscription-manager release --set=${RHEL_VERSION_NUM}
     sudo dnf module disable -y container-tools:rhel8
-    sudo dnf module enable -y container-tools:2.0
+    sudo dnf module enable -y ${CONTAINER_TOOLS_MODULE}
     sudo dnf module disable -y virt:rhel
     sudo dnf module enable -y virt:8.2
     sudo dnf distro-sync -y
@@ -38,6 +38,6 @@ parameter_defaults:
     --enablerepo rhel-8-for-x86_64-highavailability-rpms
     --enablerepo fast-datapath-for-rhel-8-x86_64-rpms
     --enablerepo ansible-2.9-for-rhel-8-x86_64-rpms
-    --enablerepo openstack-16.1-for-rhel-8-x86_64-rpms
+    --enablerepo openstack-${RHOSP_VERSION_NUM}-for-rhel-8-x86_64-rpms
     --enablerepo satellite-tools-6.5-for-rhel-8-x86_64-rpms
     --enablerepo advanced-virt-for-rhel-8-x86_64-rpms
