ffu fixes for rhsm case
- added WA for leapp cleanup because of packages conflicts

Change-Id: I6e40df9d088830be69ba11b4d663cdddd6a5a628

--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
@@ -24,6 +24,7 @@ parameter_defaults:
     sudo yum -y remove mariadb-server* || true
 
   UpgradeLeappDebug: true
+
   UpgradeInitCommand: |
     sudo subscription-manager release --set=${RHEL_VERSION_NUM}
     sudo dnf module disable -y container-tools:rhel8
@@ -31,8 +32,20 @@ parameter_defaults:
     sudo dnf module disable -y virt:rhel
     sudo dnf module enable -y virt:8.2
     sudo dnf distro-sync -y
+    # WA t oavoid error on next cleanup
+    # Error:
+    #  Problem: package python2-requests-2.20.0-3.module+el8.2.0+4577+feefd9b8.noarch requires python2-urllib3, but none of the providers can be installed
+    #   - package leapp-deps-el8-5.0.8-100.202109271224Z.b7ebfca.master.el8.noarch requires python2-requests, but none of the providers can be installed
+    #   - package python2-urllib3-1.24.2-3.module+el8.4.0+9193+f3daf6ef.noarch requires python2-pysocks, but none of the providers can be installed
+    #   - package python2-leapp-0.13.0-1.el7_9.noarch requires leapp-framework-dependencies = 3, but none of the providers can be installed
+    #   - conflicting requests
+    #   - problem with installed package python2-leapp-0.13.0-1.el7_9.noarch
+    sudo rpm -e --nodeps python2-leapp || true
+    sudo rpm -e --nodeps leapp || true
+    sudo rpm -e --nodeps leapp-upgrade-el7toel8 || true
+
   UpgradeLeappCommandOptions: >
-    --no-rhsm
+    --debug ${RHSM_PARAMTERS}
     --enablerepo rhel-8-for-x86_64-baseos-rpms
     --enablerepo rhel-8-for-x86_64-appstream-rpms
     --enablerepo rhel-8-for-x86_64-highavailability-rpms
