--- a/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
+++ b/rhosp/ffu_ziu_13_16/redhat_files/upgrades-environment.yaml.template
@@ -22,16 +22,16 @@ parameter_defaults:
     #https://bugzilla.redhat.com/show_bug.cgi?id=1952574#c1
     sudo leapp answer --add --section authselect_check.confirm=True
     #https://bugzilla.redhat.com/show_bug.cgi?id=2015325#c19
-    sudo yum -y remove mariadb-server* || true
+    #sudo yum -y remove mariadb-server* || true
 
   UpgradeLeappDebug: true
 
   UpgradeInitCommand: |
     ${UPGRADE_ENV_OPTS3}
-    sudo dnf module disable -y container-tools:rhel8
+    sudo dnf module reset -y container-tools
     sudo dnf module enable -y ${CONTAINER_TOOLS_MODULE}
-    sudo dnf module disable -y virt:rhel
-    sudo dnf module enable -y virt:8.2
+    #sudo dnf module disable -y virt:rhel
+    #sudo dnf module enable -y virt:8.2
     sudo dnf distro-sync -y
     # WA t oavoid error on next cleanup
     # Error:
